// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Anchor /> should match snapshot with label, icon and to props 1`] = `
<a
  className="root"
  disabled={false}
  href="https://www.hellowrold.com"
>
  <Component
    className="icon"
    size={16}
  />
  <Text
    className="label"
  >
    Hello World!
  </Text>
</a>
`;

exports[`<Anchor /> should match snapshot without label 1`] = `
<a
  className="root"
  disabled={false}
>
  <Text
    className="label"
  />
</a>
`;

exports[`<Anchor /> when custom component deprecated still work should match snapshot with label, icon custom component 1`] = `
<a
  className="root"
  compnent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    }
  }
  disabled={false}
  to="https://www.hellowrold.com"
>
  <Component
    className="icon"
    size={16}
  />
  <Text
    className="label"
  >
    Hello World!
  </Text>
</a>
`;

exports[`<Anchor /> when custom component should match snapshot with label, icon custom component 1`] = `
<ForwardRef
  className="root"
  disabled={false}
  to="https://www.hellowrold.com"
>
  <Component
    className="icon"
    size={16}
  />
  <Text
    className="label"
  >
    Hello World!
  </Text>
</ForwardRef>
`;
